syntax = "proto3";

package emotion.v1;

option go_package = "github.com/sweekar/api/proto/emotion/v1;emotionv1";

// 情绪分析服务定义
service EmotionService {
  // 分析情绪
  rpc AnalyzeEmotion(AnalyzeEmotionRequest) returns (AnalyzeEmotionResponse);
  // 获取情绪报告
  rpc GetEmotionReport(GetEmotionReportRequest) returns (GetEmotionReportResponse);
  // 推送情绪报告
  rpc PushEmotionReport(PushEmotionReportRequest) returns (PushEmotionReportResponse);
}

// 分析情绪请求
message AnalyzeEmotionRequest {
  string child_id = 1;
  string text_content = 2;
  bytes audio_data = 3;
}

// 分析情绪响应
message AnalyzeEmotionResponse {
  EmotionInfo emotion = 1;
}

// 获取情绪报告请求
message GetEmotionReportRequest {
  string child_id = 1;
  string date = 2;
}

// 获取情绪报告响应
message GetEmotionReportResponse {
  EmotionReport report = 1;
}

// 推送情绪报告请求
message PushEmotionReportRequest {
  string parent_id = 1;
  string child_id = 2;
  string date = 3;
}

// 推送情绪报告响应
message PushEmotionReportResponse {
  bool success = 1;
  string message = 2;
}

// 情绪信息
message EmotionInfo {
  string emotion_type = 1;
  float confidence = 2;
  map<string, float> emotion_scores = 3;
}

// 情绪报告
message EmotionReport {
  string report_id = 1;
  string child_id = 2;
  string date = 3;
  repeated EmotionRecord records = 4;
  EmotionSummary summary = 5;
  string created_at = 6;
}

// 情绪记录
message EmotionRecord {
  string record_id = 1;
  string chat_record_id = 2;
  EmotionInfo emotion = 3;
  string timestamp = 4;
}

// 情绪总结
message EmotionSummary {
  map<string, float> emotion_distribution = 1;
  string dominant_emotion = 2;
  string analysis = 3;
  repeated string suggestions = 4;
}